# Micro-ros-xrce

./: README.md  Readme_test_xrce.md  Readme_verif_install.md  setup.sh
test/: CMakeLists.txt  test.yaml
test/ping/: CMakeLists.txt  ping.c
test/pong/: CMakeLists.txt  pong.c
test/rosbagpub/: CMakeLists.txt  rosbagpub.c
test/rosbagsub/: CMakeLists.txt  rosbagsub.c
test/subset/: metadata.yaml  subset_0.db3
